Footer y otros cambios

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--[if lt IE 9]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-  <title>B-School Free Education HTML5 Website Template | WebThemez</title>
+  <title>EleGroup</title>
   <meta name="description" content="">
   <meta name="author" content="WebThemez">
   <!--[if lt IE 9]>
@@ -422,36 +422,20 @@
                 <footer>
                   <div class="container">
                     <div class="row">
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <div class="col">
                           <h4>Contact us</h4>
                           <ul>
-                            <li>1th Avenue, New York - United States</li>
-                            <li>Phone: +22 342 2345 345 | Fax: +22 724 2342 343 </li>
-                            <li>Email: <a href="mailto:info@example.com" title="Email Us">info@example.com</a></li>
-                            <li>Skype: <a href="skype:my.test?call" title="Skype us">my-company</a></li>
+                            <li>Dirección: Monte Rosa 255, piso 4, Chacarilla-Surco, Lima-Perú.</li>
+                            <li>Teléfonos: (511) 625 9773 | (51) 987 412 054. </li>
+                            <li>Correo-e: <a href="mailto:Jose.vergara@elegroup.com.pe" title="Email Us">Jose.vergara@elegroup.com.pe</a></li>
                           </ul>
                         </div>
                       </div>
 
-                      <div class="col-md-3">
-                        <div class="col">
-                          <h4>Mailing list</h4>
-                          <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat.</p>
-                          <form class="form-inline">
-                            <div class="input-group">
-                              <input type="text" class="form-control" placeholder="Your email address...">
-                              <span class="input-group-btn">
-                                <button class="btn" type="button">Go!</button>
-                              </span>
-                            </div>
-                          </form>
-                        </div>
-                      </div>
-
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <div class="col col-social-icons">
-                          <h4>Follow us</h4>
+                          <h4>Social</h4>
                           <a href="#"><i class="fa fa-facebook"></i></a>
                           <a href="#"><i class="fa fa-google-plus"></i></a>
                           <a href="#"><i class="fa fa-youtube-play"></i></a>
@@ -463,13 +447,13 @@
                         </div>
                       </div>
 
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <div class="col">
-                          <h4>Latest News</h4>
+                          <h4>Ultimas Noticias</h4>
                           <p>
                             Lorem ipsum dolor labitur scsstie per sit amet, ea eum labitur scsstie percipitoleat.
                             <br><br>
-                            <a href="#" class="btn">Get Mores!</a>
+                            <a href="#" class="btn">¡Mas!</a>
                           </p>
                         </div>
                       </div>
@@ -482,7 +466,7 @@
                 <section class="copyright">
                   <div class="container">
                     <div class="row">
-                      <div class="col-sm-12 text-center"> Copyright 2014 | All Rights Reserved -- Template by -  <a href="http://webThemez.com"> WebThemez.com</a> </div>
+                      <div class="col-sm-12 text-center"> Elegroup 2016 | Todos los derechos reservados</div>
                     </div>
                     <!-- / .row -->
                   </div>
