--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="active item"><img src="images/banner-bg.jpg" alt="banner" /></div>
             <div class="item"><img src="images/banner-bg2.jpg" alt="banner" /></div>
             <div class="item"><img src="images/banner-bg3.jpg" alt="banner" /></div>
+            <div class="item"><img src="images/banner-bg4.jpg" alt="banner" /></div>
           </div>
           <!-- Carousel nav -->
           <a class="carousel-control left" href="#carousel" data-slide="prev">&lsaquo;</a>
