Otras imagenes faltantes, Correcion de estilos

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li data-target="#carousel" data-slide-to="0" class="active"></li>
             <li data-target="#carousel" data-slide-to="1"></li>
             <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
           </ol>
           <!-- Carousel items -->
           <div class="carousel-inner">
@@ -300,8 +301,7 @@
           <div class="heading text-center">
             <!-- Heading -->
             <h2>Nuestros Convenios</h2>
-            <p>Contamos con socios para ofrecer servicios de primera. <br>
-              Educativa España,  Campus lider de Iberoamérica en sistemas para formación, siendo socios estrategicos en la creacion de contenidos y platafornas virtuales.</p>
+            <p>Contamos con socios para ofrecer servicios de primera.</p>
             </div>
             <!-- Team Member's Details -->
             <div class="team-content">
@@ -312,12 +312,12 @@
                     <!-- Image Hover Block -->
                     <div class="member-img">
                       <!-- Image  -->
-                      <img class="img-responsive" src="images/photo-1.jpg" alt=""> </div>
+                      <img class="img-responsive" src="images/convenios/logo_educativa.png" alt="Educativa España"> </div>
                       <!-- Member Details -->
                       <div class="team-title">
-                        <h4>John Doe</h4>
+                        <h4>Educativa España</h4>
                         <!-- Designation -->
-                        <span class="pos">DEAN</span>
+                        <span class="pos small">Campus lider de Iberoamérica en sistemas para formación, siendo socios estrategicos en la creacion de contenidos y platafornas virtuales.</span>
                       </div>
                       <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
                     </div>
@@ -376,11 +376,15 @@
                         <div class="heading text-center">
                           <!-- Heading -->
                           <h2>Contactanos</h2>
-                          <address>
+                          <!-- <address>
                             <strong>Dirección</strong>: Monte Rosa 255, piso 4, Chacarilla-Surco, Lima-Pe. <br>
                             <strong>Teléfonos</strong>: (511) 625 9773-(51) 987 412 054. <br>
                             <strong>Email</strong>: Jose.vergara@elegroup.com.pe.
-                          </address>
+                          </address> -->
+                          <p class="small">
+                            <strong>ELE Group</strong><br>
+                            Somos un conjunto de profesionales de distintas áreas que ofrecemos nuestras capacidades y competencias para ayudar a mejorar la calidad educativa de las instituciones que están vinculadas a nuestros sistema.
+                          </p>
                         </div>
                       </div>
                       <div class="row mrgn30">
@@ -425,7 +429,7 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="col">
-                          <h4>Contact us</h4>
+                          <h4>Contactanos</h4>
                           <ul>
                             <li>Dirección: Monte Rosa 255, piso 4, Chacarilla-Surco, Lima-Perú.</li>
                             <li>Teléfonos: (511) 625 9773 | (51) 987 412 054. </li>
