Cambiando nuevo mensaje de ¿quienes somos?

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <div class="heading text-center">
             <!-- Heading -->
             <h2>¿Quiénes somos?</h2>
-            <p>Somos un conjunto de profesionales de distintas áreas que ofrecemos nuestras capacidades y competencias para ayudar a mejorar la calidad educativa de las instituciones que están vinculadas a nuestros sistema.</p>
+            <p>Somos una empresa joven y somos apasionados de la educación en línea, desde hace dos años venimos desarrollando soluciones en programas de formación que permitan mejorar la calidad de los procesos formativos de nuestros clientes.</p>
           </div>
           <div class="row feature design">
             <div class="area1 columns left">
